--- a/pom.xml
+++ b/pom.xml
@@ -30,12 +30,14 @@
       <artifactId>gson</artifactId>
       <version>2.8.9</version>
     </dependency>
-    <!-- https://mvnrepository.com/artifact/org.json/json -->
-    <!--<dependency>
-      <groupId>org.json</groupId>
-      <artifactId>json</artifactId>
-      <version>20210307</version>
-    </dependency>-->
+    <!-- https://mvnrepository.com/artifact/org.apache.commons/commons-math3 -->
+    <dependency>
+      <groupId>org.apache.commons</groupId>
+      <artifactId>commons-math3</artifactId>
+      <version>3.6.1</version>
+    </dependency>
+
+
   </dependencies>
 
   <build>
